--- a/app/partials/controls/nav.html
+++ b/app/partials/controls/nav.html
@@ -2,7 +2,7 @@
     <nav tolerance='20' offset='200' class="navbar navbar-default navbar-fixed-top" role="navigation" headroom>
         <section>
             <div class="container">
-                <ul class="nav navbar-nav pull-left">
+                <ul ng-show="PunchoutSession.PunchOutOperation != 'Inspect'" class="nav navbar-nav pull-left">
                     <li class="back animated fadeInLeft" ng-class="{'ng-hide': isActive('catalog')}">
                         <a href back-step class="back">
                             <i class="fa fa-arrow-left"></i>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav pull-right">
+                <ul ng-show="PunchoutSession.PunchOutOperation != 'Inspect'" class="nav navbar-nav pull-right">
                     <li class="cart" ng-class="{'active': isActive(['cart', 'checkout'])}">
                         <a id="451qa_cart_link" ng-show="cartCount && user.CurrentOrderID" class="cart" href="cart">
                             <span ng-bind="cartCount" class="badge"></span>
