--- a/app/partials/controls/nav.html
+++ b/app/partials/controls/nav.html
@@ -14,7 +14,7 @@
                             <span class="hidden-xs">{{'Products' | rc}}</span>
                         </a>
                     </li>
-                    <li class="order" ng-class="{'active': isActive('order'), 'active-xs': isActive('favoriteorders')}">
+                    <li ng-show="PunchoutSession.ShowOrderStats" class="order" ng-class="{'active': isActive('order'), 'active-xs': isActive('favoriteorders')}">
                         <a id="451qa_order_link" href="order">
                             <i class="fa fa-clipboard"></i>
                             <span class="hidden-xs">{{'Orders' | r}}</span>
@@ -26,13 +26,20 @@
                             <span class="hidden-xs">{{'Reports' | r}}</span>
                         </a>
                     </li>
+
                     <li ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
                         <a id="451qa_acct_link" href="admin" class="hidden-md hidden-lg">
                             <i class="fa fa-cog"></i>
                             <span class="hidden-xs">{{'Account' | r}}</span>
                         </a>
                     </li>
-                    <li class="dropdown admin-user visible-md visible-lg" ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
+					<li ng-if="AppConst.debug">
+						<a href="#" ng-click="Clear()">
+							<i class="fa fa-archive"></i>
+							<span class="text-nav">Clear Cache</span>
+						</a>
+					</li>
+                    <li ng-if="false" class="dropdown admin-user visible-md visible-lg" ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
                         <a id="451qa_acct_link2" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-cog"></i>
                             <span class="hidden-xs">{{'Account' | r}}</span>
