--- a/app/partials/controls/nav.html
+++ b/app/partials/controls/nav.html
@@ -1,115 +1,166 @@
 <header class="header navbar navbar-inner">
-    <nav tolerance='20' offset='200' class="navbar navbar-default navbar-fixed-top" role="navigation" headroom>
+    <nav tolerance='20' offset='200' class="navbar navbar-default" role="navigation" headroom>
         <section>
             <div class="container">
-                <ul ng-show="PunchoutSession.PunchOutOperation != 'Inspect'" class="nav navbar-nav pull-left">
-                    <li class="back animated fadeInLeft" ng-class="{'ng-hide': isActive('catalog')}">
-                        <a href back-step class="back">
-                            <i class="fa fa-arrow-left"></i>
-                        </a>
-                    </li>
-                    <li class="products" ng-class="{'active': isInPath('catalog') || isInPath('product') || isInPath('cart/default') || isInPath('search')}">
-                        <a id="451qa_home_link" ng-show="Four51User.isAuthenticated()" href="catalog">
-                            <i class="fa fa-home"></i>
-                            <span class="hidden-xs">{{'Products' | rc | xlat}}</span>
-                        </a>
-                    </li>
-                    <li ng-show="PunchoutSession.ShowOrderStats" class="order" ng-class="{'active': isActive('order'), 'active-xs': isActive('favoriteorders')}">
-                        <a id="451qa_order_link" href="order">
-                            <i class="fa fa-clipboard"></i>
-                            <span class="hidden-xs">{{'Orders' | r | xlat}}</span>
-                        </a>
-                    </li>
-                    <li class="report" ng-if="user.Permissions.contains('AdvancedReporting')" ng-class="{'active': isActive('reports')}">
-                        <a id="451qa_order_link" href="reports">
-                            <i class="fa fa-bar-chart-o"></i>
-                            <span class="hidden-xs">{{'Reports' | r | xlat}}</span>
-                        </a>
-                    </li>
+                <div class="col-sm-2 col-xs-1 col-md-2 nav-img">
+                    <a href="http://www.ca.com/us/default.aspx" target="_blank">
+                        <img class="img-responsive" ng-src="css/images/calogo.png" />
+                        <img class="img-responsive hidden-xs hidden-sm" ng-src="css/images/line.png" />
+                    </a>
+                </div>
+                <div class="col-md-2 hidden-xs hidden-sm nav-text">
+                    <p><strong>Brand Store</strong></p>
+                </div>
+                <div class="col-lg-4 col-md-5 col-sm-5 col-xs-6 pull-right">
+                    <productsearchinput class="hidden-xs"></productsearchinput>
+                    <ul class="nav navbar-nav">
+                        <li class="back animated fadeInLeft" ng-class="{'ng-hide': isActive('catalog')}">
+                            <a href back-step class="back">
+                                <i class="fa fa-arrow-left" title="Back"></i>
+                            </a>
+                        </li>
+                        <li class="hidden-xs" ng-class="{'active': isActive('catalog')}">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="products hidden-md hidden-lg" ng-class="{'active': pathAndExtension('catalog') || isInPath('product') || isInPath('cart/default') || isInPath('search')}">
+                            <a id="451qa_home_link" ng-show="Four51User.isAuthenticated()" href="catalog">
+                                <i class="fa fa-home visible-xs" title="Home"></i>
+                                <span class="hidden-xs">{{'Products' | rc | xlat}}</span>
+                            </a>
+                        </li>
 
-                    <li ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
-                        <a id="451qa_acct_link" href="admin" class="hidden-md hidden-lg">
-                            <i class="fa fa-cog"></i>
-                            <span class="hidden-xs">{{'Account' | r | xlat}}</span>
-                        </a>
-                    </li>
-					<li ng-if="AppConst.debug">
-						<a href="#" ng-click="Clear()">
-							<i class="fa fa-archive"></i>
-							<span class="text-nav">Clear Cache</span>
-						</a>
-					</li>
-                    <li ng-if="false" class="dropdown admin-user visible-md visible-lg" ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
-                        <a id="451qa_acct_link2" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-cog"></i>
-                            <span class="hidden-xs">{{'Account' | r | xlat}}</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li id="451qa_user_link" ng-show="user.Permissions.contains('ViewSelfAdmin')" class="admin">
-                                <a href="admin">
-                                    {{'User Information' | r | xlat}}
-                                </a>
-                            </li>
-                            <li id="451qa_addy_link" ng-show="user.Permissions.contains('CreateShipToAddress') || user.Permissions.contains('CreateBillToAddress')" class="addresses">
-                                <a href="addresses">
-                                    {{'Addresses' | r | xlat}}
-                                </a>
-                            </li>
-                            <li id="451qa_mesg_link" ng-show="user.Permissions.contains('ViewMessaging')" class="messages">
-                                <a href="message">
-                                    {{'Messages' | r | xlat}}
-                                </a>
-                            </li>
-                            <li class="favorites hidden-xs">
-                                <a id="451qa_fave_link" href="favoriteorders">
-                                    {{'Favorites' | r | xlat}}
-                                </a>
-                            </li>
-                            <li id="451qa_mesg_link" ng-show="user.Permissions.contains('ViewContactUs')" class="contactus">
-                                <a href="contactus">
-                                    {{'Contact Us' | r | xlat}}
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" neworder ng-if="user.Permissions.contains('MultipleShoppingCart') && currentOrder" class="neworder" ng-click="newOrderLoadingIndicator = true;startNewOrder()">
-                                    {{"Start" | r | xlat}} {{"New" | r | xlat}} {{"Order" | r | xlat}}
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li ng-show="user.Type!='TempCustomer'" class="logout">
-                                <a href="#"  class="451_btn_logout" ng-click="Logout()">
-                                    <i class="fa fa-power-off text-danger"></i>
-                                    <span>{{'Log Out' | r | xlat}}</span>
-                                </a>
-                            </li>
-                            <li ng-if="AppConst.debug">
-                                <a href="#" ng-click="Clear()">
-                                    <i class="fa fa-archive"></i>
-                                    <span class="text-nav">Clear Cache</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul ng-show="PunchoutSession.PunchOutOperation != 'Inspect'" class="nav navbar-nav pull-right">
-                    <li class="cart" ng-class="{'active': isActive(['cart', 'checkout'])}">
-                        <a id="451qa_cart_link" ng-show="cartCount && user.CurrentOrderID" class="cart" href="cart">
-                            <span ng-bind="cartCount" class="badge"></span>
-                            <i class="fa fa-shopping-cart"></i>
-                            <i class="fa fa-caret-down"></i>
-                        </a>
-                    </li>
-                </ul>
+                        <li class="products visible-md visible-lg dropdown" ng-class="{'active': pathAndExtension('catalog') || isInPath('product') || isInPath('cart/default') || isInPath('search')}">
+                            <a id="451qa_home_link" class="dropdown-toggle" data-toggle="dropdown" ng-show="Four51User.isAuthenticated()">
+                                <span class="hidden-xs">{{'Products' | rc | xlat}}</span>
+                                <b class="caret"></b>
+                            </a>
+                            <categorytree class="category-tree" tree='tree' current='currentCategory' />
+                        </li>
+                        <!-- <li class="order" ng-if="user.Type == 'Customer'" ng-class="{'active': isActive('order'), 'active-xs': isActive('favoriteorders')}">
+                         <a id="451qa_order_link" href="order">
+                         <i class="fa fa-clipboard"></i>
+                         <span class="hidden-xs">{{'Orders' | r | xlat}}</span>
+                         </a>
+                         </li>-->
+
+                        <!--EXTERNAL LINKS TO OTHER 'CA' SITES-->
+                        <!--<li>
+                            <a id="451qa_acct_link" href="geostores" class="hidden-md hidden-lg">
+                                <i class="fa fa-link visible-xs" title="Geo Brand Stores"></i>
+                                <span class="hidden-xs">{{'Geo Brand Stores' | r | xlat}}</span>
+                            </a>
+                        </li>
+                        <li class="dropdown visible-md visible-lg">
+                            <a id="451qa_acct_link2" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-cog visible-xs"></i>
+                                <span class="hidden-xs">{{'Geo Brand Stores' | r | xlat}}</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                &lt;!&ndash;<li>
+                                    <a href="#">
+                                        {{'APJ' | r | xlat}}
+                                    </a>
+                                </li>&ndash;&gt;
+                                <li>
+                                    <a ng-href="{{storeLink}}">
+                                        {{storeAbbr}}
+                                    </a>
+                                </li>
+                                &lt;!&ndash;<li>
+                                    <a href="#">
+                                        {{'CA Europe' | r | xlat}}
+                                    </a>
+                                </li>&ndash;&gt;
+                            </ul>
+                        </li>-->
+                        <li>
+                            <a href="contactus">
+                                <i class="fa fa-phone visible-xs" title="Contact Us"></i>
+                                <span class="hidden-xs">Contact Us</span>
+                            </a>
+                        </li>
+                        <!--<li ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
+                            <a id="451qa_acct_link" href="admin" class="hidden-md hidden-lg">
+                                <i class="fa fa-cog visible-xs" title="Account"></i>
+                                <span class="hidden-xs">{{'Account' | r | xlat}}</span>
+                            </a>
+                        </li>
+                        <li class="dropdown admin-user visible-md visible-lg" ng-class="{'active': isActive(['admin', 'addresses', 'address', 'messages', 'message', 'favoriteorders'])}">
+                            <a id="451qa_acct_link2" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-cog visible-xs"></i>
+                                <span class="hidden-xs">{{'Account' | r | xlat}}</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li id="451qa_user_link" ng-show="user.Permissions.contains('ViewSelfAdmin')" class="admin">
+                                    <a href="admin">
+                                        {{'User Information' | r | xlat}}
+                                    </a>
+                                </li>
+                                <li id="451qa_addy_link" ng-show="user.Type == 'Customer' && (user.Permissions.contains('CreateShipToAddress') || user.Permissions.contains('CreateBillToAddress'))" class="addresses">
+                                    <a href="addresses">
+                                        {{'Addresses' | r | xlat}}
+                                    </a>
+                                </li>
+                                <li id="451qa_mesg_link" ng-show="user.Type == 'Customer' && user.Permissions.contains('ViewMessaging')" class="messages">
+                                    <a href="message">
+                                        {{'Messages' | r | xlat}}
+                                    </a>
+                                </li>
+                                <li class="favorites" ng-show="user.Type == 'Customer'">
+                                    <a id="451qa_fave_link" href="favoriteorders">
+                                        {{'Favorites' | r | xlat}}
+                                    </a>
+                                </li>
+                                <li id="451qa_mesg_link" ng-show="user.Permissions.contains('ViewContactUs')" class="contactus">
+                                    <a href="contactus">
+                                        {{'Contact Us' | r | xlat}}
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" neworder ng-if="user.Permissions.contains('MultipleShoppingCart') && currentOrder" class="neworder" ng-click="newOrderLoadingIndicator = true;startNewOrder()">
+                                        {{"Start" | r | xlat}} {{"New" | r | xlat}} {{"Order" | r | xlat}}
+                                    </a>
+                                </li>
+                                <li class="divider" ng-show="user.Type!='TempCustomer' || AppConst.debug"></li>
+                                <li ng-show="user.Type!='TempCustomer'" class="logout">
+                                    <a href="#"  class="451_btn_logout" ng-click="Logout()">
+                                        <i class="fa fa-power-off text-danger"></i>
+                                        <span>{{'Log Out' | r | xlat}}</span>
+                                    </a>
+                                </li>
+                                <li ng-if="AppConst.debug">
+                                    <a href="#" ng-click="Clear()">
+                                        <i class="fa fa-archive"></i>
+                                        <span class="text-nav">Clear Cache</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="report" ng-if="user.Type == 'Customer' && user.Permissions.contains('AdvancedReporting')" ng-class="{'active': isActive('reports')}">
+                            <a id="451qa_order_link" href="reports">
+                                <i class="fa fa-bar-chart-o"></i>
+                                <span class="hidden-xs">{{'Reports' | r | xlat}}</span>
+                            </a>
+                        </li>
+                        <li class="cart" ng-class="{'active': isActive(['cart', 'checkout'])}">
+                            <a id="451qa_cart_link" ng-show="cartCount && user.CurrentOrderID" class="cart" href="cart">
+                                <span class="hidden-xs">{{'View Cart' | r | xlat}}</span>
+                                <i class="fa fa-shopping-cart visible-xs" title="View Cart"></i>
+                            </a>
+                        </li>-->
+                    </ul>
+                </div>
             </div>
         </section>
     </nav>
-    <nav class="dropdown-mega">
-        <a class="dropdown-toggle text-center" data-toggle="dropdown">
-            <i class="fa fa-angle-down text-primary"></i>
-        </a>
-        <ul class="451qa_topnav dropdown-menu" >
-            <categorytree tree='tree' current='currentCategory' />
-        </ul>
-    </nav>
+    <!--<nav class="dropdown-mega">-->
+    <!--<a class="dropdown-toggle text-center" data-toggle="dropdown">-->
+    <!--<i class="fa fa-angle-down text-primary"></i>-->
+    <!--</a>-->
+    <!--<ul class="451qa_topnav dropdown-menu" >-->
+    <!--<categorytree tree='tree' current='currentCategory' />-->
+    <!--</ul>-->
+    <!--</nav>-->
 </header>
