--- a/app/partials/relatedProductsView.html
+++ b/app/partials/relatedProductsView.html
@@ -1,34 +1,20 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">{{('Related' | r) + ' ' +  ('Products' | r) | xlat}}</h3>
-    </div>
-    <div class="panel-product-list">
-        <nav class="nav">
-            <ul>
-                <li ng-repeat="p in relatedProducts">
-                    <div class="well">
-                        <div class="row">
-                            <div class="col-sm-4 text-center">
-                                <a class="thumbnail" href="product/{{p.InteropID}}">
-                                    <figure>
-                                        <img ng-src="{{p.SmallImageUrl}}"/>
-                                    </figure>
-                                    <div class="empty" ng-hide="p.SmallImageUrl">
-                                        <span class="fa empty"><i class="fa fa-camera"></i></span>
-                                    </div>
-                                    <div class="btn btn-default">{{('View' | r) + ' ' + ('Product' | r) | xlat}}</div>
-                                </a>
-                            </div>
-                            <div class="col-sm-8 text-left">
-                                <div class="panel-body">
-                                    <h3>{{p.Name}}</h3>
-                                    <p ng-bind-html="trusted(p.Description)" />
-                                </div>
-                            </div>
-                        </div>
+
+<h4 class="text-center">Related Products</h4>
+<nav class="nav">
+    <ul>
+        <li class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-repeat="p in relatedProducts">
+            <div class="well" style="width: 100%;">
+                <a ng-href="product/{{p.InteropID}}">
+                    <div ng-show="p.LargeImageUrl">
+                        <img class="img-responsive" ng-src="{{p.LargeImageUrl}}"/>
                     </div>
-                </li>
-            </ul>
-        </nav>
-    </div>
+                    <div class="empty" ng-show="!p.LargeImageUrl">
+                        <span class="fa empty"><i class="fa fa-camera"></i></span>
+                    </div>
+                    <h5 ng-bind-html="p.Name" />
+                </a>
+            </div>
+        </li>
+    </ul>
+</nav>
 </div>
