--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -374,6 +374,16 @@ fieldset[disabled] .btn-warning.active {
     background-color: #212a30;
 }
 
+.navbar-fixed-bottom ul li:nth-of-type(1) .btn small {
+    font-size: 14px;
+}
+.navbar-fixed-bottom ul li:nth-of-type(2) .btn small {
+    font-size: 14px;
+}
+.navbar-fixed-bottom ul li:nth-of-type(3) .btn small {
+    font-size: 14px;
+}
+
 /*Custom set for geostore partials html page*/
 .geostorepage .panel-header {
     border-bottom: 1px solid #acacac
