--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -375,13 +375,19 @@ fieldset[disabled] .btn-warning.active {
 }
 
 .navbar-fixed-bottom ul li:nth-of-type(1) .btn small {
-    font-size: 14px;
+    font-size: 17px;
 }
 .navbar-fixed-bottom ul li:nth-of-type(2) .btn small {
-    font-size: 14px;
+    font-size: 17px;
 }
 .navbar-fixed-bottom ul li:nth-of-type(3) .btn small {
-    font-size: 14px;
+    font-size: 17px;
+}
+.navbar-fixed-bottom ul li:nth-of-type(4) .btn span {
+    font-size: 17px;
+}
+.navbar-fixed-bottom ul li .btn {
+    font-size: 17px;
 }
 
 /*Custom set for geostore partials html page*/
